Complete initial HTML/CSS setup

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,29 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./app.js"></script>
+  </head>
+  <body>
+    <h1>Tic Tac Toe</h1>
+    <table cellspacing="0">
+      <tr>
+        <td id="r1c1" class="space" onclick=""></td>
+        <td id="r1c2" class="space"></td>
+        <td id="r1c3" class="space"></td>
+      </tr>
+      <tr>
+        <td id="r2c1" class="space"></td>
+        <td id="r2c2" class="space"></td>
+        <td id="r2c3" class="space"></td>
+      </tr>
+      <tr>
+        <td id="r3c1" class="space"></td>
+        <td id="r3c2" class="space"></td>
+        <td id="r3c3" class="space"></td>
+      </tr>
+    </table>
+  </body>
+</html>
