Allow player turns

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="./app.js"></script>
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
     <table cellspacing="0">
       <tr>
-        <td id="r1c1" class="space" onclick=""></td>
+        <td id="r1c1" class="space"></td>
         <td id="r1c2" class="space"></td>
         <td id="r1c3" class="space"></td>
       </tr>
@@ -25,5 +24,6 @@
         <td id="r3c3" class="space"></td>
       </tr>
     </table>
+    <script src="./app.js"></script>
   </body>
 </html>
