--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -8,20 +8,20 @@
   <body>
     <h1>Tic Tac Toe</h1>
     <table cellspacing="0">
-      <tr>
-        <td id="r1c1" class="space"></td>
-        <td id="r1c2" class="space"></td>
-        <td id="r1c3" class="space"></td>
+      <tr class="row1">
+        <td id="0" class="space"></td>
+        <td id="1" class="space"></td>
+        <td id="2" class="space"></td>
       </tr>
-      <tr>
-        <td id="r2c1" class="space"></td>
-        <td id="r2c2" class="space"></td>
-        <td id="r2c3" class="space"></td>
+      <tr class="row2">
+        <td id="3" class="space"></td>
+        <td id="4" class="space"></td>
+        <td id="5" class="space"></td>
       </tr>
-      <tr>
-        <td id="r3c1" class="space"></td>
-        <td id="r3c2" class="space"></td>
-        <td id="r3c3" class="space"></td>
+      <tr class="row3">
+        <td id="6" class="space"></td>
+        <td id="7" class="space"></td>
+        <td id="8" class="space"></td>
       </tr>
     </table>
     <script src="./app.js"></script>
