Complete basic requirements

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -7,23 +7,26 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
-    <table cellspacing="0">
-      <tr class="row1">
-        <td id="0" class="space"></td>
-        <td id="1" class="space"></td>
-        <td id="2" class="space"></td>
-      </tr>
-      <tr class="row2">
-        <td id="3" class="space"></td>
-        <td id="4" class="space"></td>
-        <td id="5" class="space"></td>
-      </tr>
-      <tr class="row3">
-        <td id="6" class="space"></td>
-        <td id="7" class="space"></td>
-        <td id="8" class="space"></td>
-      </tr>
-    </table>
+    <div id="container">
+      <table cellspacing="0">
+        <tr class="row1">
+          <td id="0" class="space"></td>
+          <td id="1" class="space"></td>
+          <td id="2" class="space"></td>
+        </tr>
+        <tr class="row2">
+          <td id="3" class="space"></td>
+          <td id="4" class="space"></td>
+          <td id="5" class="space"></td>
+        </tr>
+        <tr class="row3">
+          <td id="6" class="space"></td>
+          <td id="7" class="space"></td>
+          <td id="8" class="space"></td>
+        </tr>
+      </table>
+      <button type="button" id="reset">Reset</button>
+    </div>
     <script src="./app.js"></script>
   </body>
 </html>
