--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Tic Tac Toe</h1>
     <div id="container">
+      <div id="score"></div>
       <table cellspacing="0">
         <tr class="row1">
           <td id="0" class="space"></td>
