--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,11 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>CSV Report Generator</title>
+  </head>
+  <body>
+    <h1>CSV Report Generator</h1>
+    <script src="app.js"></script>
+  </body>
+</html>
