--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -8,54 +8,8 @@
   <body>
     <h1>CSV Report Generator</h1>
     <main>
-      <form action="/generate" method="post">
-        <textarea name="input" placeholder="Enter JSON data here...">{
-            "firstName": "Joshie",
-            "lastName": "Wyattson",
-            "county": "San Mateo",
-            "city": "San Mateo",
-            "role": "Broker",
-            "sales": 1000000,
-            "children": [
-            {
-              "firstName": "Beth Jr.",
-              "lastName": "Johnson",
-              "county": "San Mateo",
-              "city": "Pacifica",
-              "role": "Manager",
-              "sales": 2900000,
-              "children": [
-                {
-                  "firstName": "Smitty",
-                  "lastName": "Won",
-                  "county": "San Mateo",
-                  "city": "Redwood City",
-                  "role": "Sales Person",
-                  "sales": 4800000,
-                  "children": []
-                },
-                {
-                  "firstName": "Allen",
-                  "lastName": "Price",
-                  "county": "San Mateo",
-                  "city": "Burlingame",
-                  "role": "Sales Person",
-                  "sales": 2500000,
-                  "children": []
-                }
-              ]
-            },
-            {
-              "firstName": "Beth",
-              "lastName": "Johnson",
-              "county": "San Francisco",
-              "city": "San Francisco",
-              "role": "Broker/Sales Person",
-              "sales": 7500000,
-              "children": []
-            }
-          ]
-        }</textarea>
+      <form action="/" method="post">
+        <textarea name="input" placeholder="Enter JSON data here..."></textarea>
         <br>
         <input type="submit" value="Submit">
       </form>
