--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -8,8 +8,11 @@
   <body>
     <h1>CSV Report Generator</h1>
     <main>
-      <form action="/" method="post">
-        <textarea name="input" placeholder="Enter JSON data here..."></textarea>
+      <form action="/" method="post" enctype="multipart/form-data">
+        <!-- <textarea name="input" placeholder="Enter JSON data here..."></textarea> -->
+        <label for="file">Choose a JSON file to convert:</label>
+        <br>
+        <input type="file" id="file" name="file" accept=".json">
         <br>
         <input type="submit" value="Submit">
       </form>
