--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>CSV Report Generator</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <h1>CSV Report Generator</h1>
-    <main>
-      <form action="/" method="post" enctype="multipart/form-data">
-        <!-- <textarea name="input" placeholder="Enter JSON data here..."></textarea> -->
-        <label for="file">Choose a JSON file to convert:</label>
-        <br>
-        <input type="file" id="file" name="file" accept=".json">
-        <br>
-        <input type="submit" value="Submit">
-      </form>
-    </main>
-    <script src="app.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>CSV Report Generator</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+  <h1>CSV Report Generator</h1>
+  <main>
+    <form action="/" method="post" enctype="multipart/form-data">
+      <label for="file">Choose a JSON file to convert:</label>
+      <br>
+      <input type="file" id="file" name="file" accept=".json">
+      <br>
+      <input type="submit" value="Submit">
+    </form>
+    <h1 id="csv">CSV Report</h1>
+    <div id="report"></div>
+  </main>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="app.js"></script>
+</body>
+
 </html>
