Complete basic requirements

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -19,6 +19,7 @@
     </form>
     <h1 id="csv">CSV Report</h1>
     <div id="report"></div>
+    <p><a id="download">Download CSV</a></p>
   </main>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="app.js"></script>
