--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,20 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <title>Checkout</title>
+  <link rel="stylesheet" href="styles.css">
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+</head>
 
+<body>
+  <h1>Taco Express</h1>
+  <p>Tacos, delivered to you.</p>
+  <div id="app"></div>
+  <script src="checkout.js"></script>
+  <script src="app.js"></script>
+</body>
+
+</html>
