--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -11,9 +11,8 @@
 
 <body>
   <h1>Taco Express</h1>
-  <p>Tacos, delivered to you.</p>
+  <p id="description">Tacos, delivered to you.</p>
   <div id="app"></div>
-  <script src="checkout.js"></script>
   <script src="app.js"></script>
 </body>
 
